Fix Scalebar dropdown text alignment

--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.scaleselector.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.scaleselector.scss
@@ -1,5 +1,6 @@
 .mb-element-scaleselector {
   .dropdown {
+    text-align: right;  // purely numeric contents
     min-width: 100px;
   }
   span + .dropdown {
