--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -82,11 +82,14 @@
     }
   }
 
-  .itemsRight{
+  .itemsRight {
     text-align:right;
     .toolBarItem{padding-left:$space/4;}
+    .dropdown:not(.numeric) {
+      text-align: left;
+    }
   }
-  .itemsCenter{
+  .itemsCenter {
     text-align:center;
     .toolBarItem{padding-right:$space/2;}
   }
